konst/tests/misc_tests/destructure_rec_ui_tests/from_ref_braced_struct_err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/destructure_rec_ui_tests/from_ref_braced_struct_err.rs:9:5
  |
9 |     konst::destructure_rec!{Braced{bar, baz, qux} = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `Braced`, found `&Braced`
  |     arguments to this function are incorrect
  |
note: function defined here
 --> src/macros/destructuring.rs
  |
  | pub const fn assert_same_type<T>(this: T, that: T) {
  |              ^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/misc_tests/destructure_rec_ui_tests/from_ref_braced_struct_err.rs:15:5
   |
15 |     konst::destructure_rec!{Braced {bar, baz, qux}: &Braced = foo}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `Braced`, found `&Braced`
   |     arguments to this function are incorrect
   |
note: function defined here
  --> src/macros/destructuring.rs
   |
   | pub const fn assert_same_type<T>(this: T, that: T) {
   |              ^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/misc_tests/destructure_rec_ui_tests/from_ref_braced_struct_err.rs:21:5
   |
21 |     konst::destructure_rec!{Braced<> {bar, baz, qux}: &Braced = foo}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `Braced`, found `&Braced`
   |     arguments to this function are incorrect
   |
note: function defined here
  --> src/macros/destructuring.rs
   |
   | pub const fn assert_same_type<T>(this: T, that: T) {
   |              ^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)
